Thu Jun 22 22:23:48 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Fix for trying to reload a montage
	* Rewrite of all linked-list code to a more generic form so I can
	do more with it. I may have introduced bugs in this (big) rewrite,
	so test test test ;-)
	* Misc fixups

Wed Jun 21 23:49:00 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Can set background from multiwindow and thumbnail modes now.

Wed Jun 21 22:43:37 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Initial thumbnail mode, thanks to patches from richlowe and
	modifications by me. Nice work dude. More to come, right now
	there's just the click (although it works with a panned or zoomed
	thumbnail list). To come - opening thumbs in a single window,
	hiliting, and hey, the rest will be a surprise, okay? ;-)
	* This is *initial* btw. I plan to properly add this to index and
	montage modes, as it needn't be a seperate mode. There's lots of
	duplication in the source right now, which needs to be cut down.

Tue Jun 20 20:02:57 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Fixed mousebutton swapping option code. It was broken for
	certain combinations, now all seems well.
	* Found a use for ctrl+button1 for now, it just blurs/sharpens the
	image dynamically - for shits and giggles. It is somewhat spoiled
	by the fact that imlib2 currently doesn't seem to care what radius
	you pass to imlib_sharpen_image(), it always does the same thing.

Mon Jun 19 17:47:37 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Added new background setting mode. "Set seamless." It's purdy.

Mon Jun 19 14:18:10 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Mwahaha. Now the window is resized when rotation starts (to fit
	the rotated image in). Also, checks are drawn properly behind the
	image, and rotation works well in combination with pan and zoom.
	* Now that all that's done, rotation is slow as shit ;) We'll see
	if we can speed that up next ;)
